--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
-     
+     <link rel="stylesheet" href="animate.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
